config/search-syncer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-syncer-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search-syncer
  template:
    metadata:
      labels:
        app: search-syncer
    spec:
      containers:
        - name: search-syncer
          image: sijibomi/search-syncer #TODO: image pull secret to auth with docker
