config/events.yaml
# CASSANDRA_USER: "cassandra" 
      #CASSANDRA_PASSWORD: "cassandra"

apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: events
  template:
    metadata:
      labels:
        app: events
    spec:
      containers:
        - name: events
          image: sijibomi/events #TODO: image pull secret to auth with docker
---
apiVersion: v1
kind: Service
metadata:
  name: events-loadbalancer
spec:
  type: LoadBalancer
  ports:
  - port: 80
  targetPort: 8080
  selector:
  app: events
