config/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: sijibomi/gateway #TODO: image pull secret to auth with docker
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-loadbalancer
spec:
  type: LoadBalancer
  ports:
  - port: 80
  targetPort: 4000
  selector:
  app: gateway
