config/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:6-alpine
           
---
apiVersion: v1
kind: Service 
metadata:
  name: redis-srv
spec:
  selector:
    app: redis
  ports:
    - name: db
      protocol: TCP
      port: 6379
      targetPort: 6379
