config/search-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-db-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search-db
  template:
    metadata:
      labels:
        app: search-db
    spec:
      containers:
        - name: search-db
          image: elasticsearch:8.1.0
           
---
apiVersion: v1
kind: Service 
metadata:
  name: search-db-srv
spec:
  selector:
    app: search-db
  ports:
    - name: db
      protocol: TCP
      port: 9200
      targetPort: 9200
