config/search.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search
  template:
    metadata:
      labels:
        app: search
    spec:
      containers:
        - name: search
          image: sijibomi/search #TODO: image pull secret to auth with docker
---
apiVersion: v1
kind: Service
metadata:
  name: search-loadbalancer
spec:
  type: LoadBalancer
  ports:
  - port: 80
  targetPort: 8080
  selector:
  app: search
