config/users.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: users
          image: sijibomi/users #TODO: imahe pull secret to auth with docker
---
apiVersion: v1
kind: Service
metadata:
  name: users-loadbalancer
spec:
  type: LoadBalancer
  ports:
  - port: 80
  targetPort: 8080
  selector:
  app: users
